<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView

            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="1dp"
            android:text="@string/Slogan"
            android:textColor="#ffff"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border"


            />


    </LinearLayout>

</RelativeLayout>